--- a/assets/css/colour-scheme/color-blue.css
+++ b/assets/css/colour-scheme/color-blue.css
@@ -15,7 +15,7 @@ body {
 .ukie-icons {
     color: #ffffff;
     border-color: #068cd6;
-    background-color: #00b6f9;
+    background-color: #0070C0;
 }
 .ukie-icons:hover{
     background-color: #0089d5;
@@ -32,7 +32,7 @@ body {
 }
 .btn-color{
     border-color: #008fd9;
-    background-color: #00b6f9;
+    background-color: #0070C0;
     color: #ffffff;
 }
 .btn-color:hover{
@@ -96,7 +96,7 @@ body {
     color: #fff;
 }
 .icons-menu-button {
-    background-color: #00b6f9;
+    background-color: #0070C0;
     color: #ffffff;
 }
 a.icons-menu-button {
@@ -111,7 +111,7 @@ a.icons-menu-button:focus,
     border-color: #058dd7;
 }
 .icons-menu-toggle-button {
-    background-color: #00b6f9;
+    background-color: #0070C0;
     border-color: #058dd7;
 }
 
@@ -122,19 +122,19 @@ a.icons-menu-button:focus,
     border-top-color: #C6C6C6;
 }
 .footer a{
-    color: #000000;
+    color: #FFFFFF;
 }
 .footer .ukie-icons{
-    border-color: #d6d6d6;
+    border-color: #525659;
     background-color: #f5f5f5;
-    color: #d6d6d6;
+    color: #525659;
 }
 .footer a:hover{
-    color: #00b6f9;
+    color: #FFFFFF;
 }
 .footer a:hover .ukie-icons{
     border-color: #068cd6;
-    background-color: #00b6f9;
+    background-color: #0070C0;
     color: #ffffff;
 }
 .footer .copyright{
@@ -147,6 +147,8 @@ a.icons-menu-button:focus,
 --------------------*/
 .head{
     border-bottom-color: #C6C6C6;
+    background: #0070C0;
+    color: #FFFFFF;
 }
 
 /* ------------------
@@ -160,15 +162,15 @@ a.icons-menu-button:focus,
 .owl-theme .owl-controls .owl-buttons div:hover{
     color: #ffffff;
     border-color: #068cd6;
-    background-color: #00b6f9;
+    background-color: #0070C0;
 }
 
 /* ------------------
     Skills section
 --------------------*/
 .skills .progress-bar{
-    background-color: #00b6f9;
-    border-color: #00b6f9;
+    background-color: #0070C0;
+    border-color: #0070C0;
 }
 .skills .progress{
     background-color: #f5f5f5;
@@ -200,7 +202,7 @@ a.icons-menu-button:focus,
 .portfolio li.active{
     border-color: #008cd6;
     color: #ffffff;
-    background-color: #00b6f9;
+    background-color: #0070C0;
 }
 .portfolio-item .port-item-cont {
     background: rgba(0, 182, 249, 0.90);
@@ -282,7 +284,7 @@ a.icons-menu-button:focus,
     Info
 --------------------*/
 .info .circle-block .icon{
-    color: #0abaf9;
+    color: #0070C0;
     border-color: #e9e9e9;
 }
 .info .circle-block:hover .icon{
@@ -301,21 +303,21 @@ a.icons-menu-button:focus,
 }
 .table-pricing.best-pricing .header-pricing{
     color: #ffffff;
-    background-color: #00b6f9;
+    background-color: #0070C0;
     border-color: #008fd9;
 }
 .table-pricing .price-pricing{
     border-color: #dfdfdf;
 }
 .table-pricing.best-pricing .price-pricing{
-    color: #00b6f9;
+    color: #0070C0;
 }
 .table-pricing .properties-pricing li{
     border-color: #dfdfdf;
     border-bottom-color: #f5f5f5;
 }
 .table-pricing .properties-pricing .arrow-check{
-    color: #00b6f9;
+    color: #0070C0;
 }
 .table-pricing .footer-pricing{
     border-color: #dfdfdf;
@@ -333,7 +335,7 @@ a.icons-menu-button:focus,
 .blog .post .btn-color-hover:hover{
     color: #ffffff;
     border-color: #068cd6;
-    background-color: #00b6f9;
+    background-color: #0070C0;
 }
 .blog .post .txt-quote{
     border-color: #ededed;
@@ -420,7 +422,7 @@ a.icons-menu-button:focus,
 .widget_tag_cloud .tagcloud a:hover{
     border-color: #008cd6;
     color: #ffffff;
-    background-color: #00b6f9;
+    background-color: #0070C0;
 }
 
 .widget_follow_us li a,
@@ -441,7 +443,7 @@ a.icons-menu-button:focus,
     Search
 --------------------*/
 .head.search-head{
-    background-color: #00b6f9;
+    background-color: #0070C0;
     border-bottom-color: #008cd6;
 }
 .head.search-head .search-input{
@@ -477,7 +479,7 @@ a.icons-menu-button:focus,
     color: #000000;
 }
 .pagination .page-numbers.current {
-    background-color: #00b6f9;
+    background-color: #0070C0;
     border-color: #008cd6;
     color: #fff;
 }
@@ -489,7 +491,7 @@ a.icons-menu-button:focus,
     Total numbers
 --------------------*/
 .total-numbers .iconspace{
-    color: #00b6f9;
+    color: #0070C0;
     border-color: #dfdfdf;
 }
 .total-numbers .iconspace:after {
