--- a/src/app/curiculum-vitae/global.css
+++ b/src/app/curiculum-vitae/global.css
@@ -14,12 +14,5 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+  background: #F5F5F5;
 }
