--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @import "tailwindcss";
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #202124;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,8 +16,9 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--foreground);
+  font-family: "Montserrat", sans-serif;
+  @apply bg-gradient-to-r from-gray-900 via-[#575757] to-gray-900;
 }
 
 @layer utilities {
